refactor: relation optimize